css: fix dark mode scrollbar to be more gray (#28)

--- a/app/globals.css
+++ b/app/globals.css
@@ -110,7 +110,7 @@ body {
   }
 
   .dark .site-scrollbar {
-    @apply scrollbar-thumb-blue-900;
+    @apply scrollbar-thumb-gray-800 scrollbar-track-gray-1000;
   }
 }
 
